kube/base/minio/minio-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  labels:
    app: minio
spec:
  serviceName: "minio-svc"
  replicas: 4                  
  podManagementPolicy: "Parallel"
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:RELEASE.2025-04-03T14-56-28Z
        volumeMounts:
        - name: minio-data
          mountPath: /data1
        args:
        - server
        - http://minio-{0...3}.minio-svc/data1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /minio/health/live
            port: http
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 10
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
  volumeClaimTemplates: 
  - metadata:
      name: minio-data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
