kube/base/minio/minio-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app: minio

---

apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  labels:
    app: minio
spec:
  selector:
    app: minio
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 9000
      targetPort: 9000
